--- a/notebooks/preprocess_labeling.ipynb
+++ b/notebooks/preprocess_labeling.ipynb
@@ -9,8 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0aaeb0d",
+   "metadata": {},
+   "source": [
+    "## 🔹 Imports and Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "59f5f482",
    "metadata": {},
    "outputs": [],
@@ -26,6 +34,8 @@
     "import pandas as pd\n",
     "import sys\n",
     "import importlib\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "sys.path.append(' F:/Telegram_E-commerce-_extractor-/src')\n",
     "import os\n",
     "os.chdir('..')"
@@ -33,20 +43,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "295a4244",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "d5817f83",
    "metadata": {},
    "source": [
-    "## load cleaned data "
+    "## 🔹 Load  cleaned data \n",
+    "Loads the cleaned and preprocessed CSV file containing Telegram data into a pandas DataFrame."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "84047589",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('F:/Telegram_E-commerce-_extractor-/data/combined_processed.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c3c727b",
+   "metadata": {},
+   "source": [
+    "## 🔹 Import Custom Preprocessing Functions\n",
+    "Imports two custom functions used for text normalization and tokenization tailored for Amharic."
    ]
   },
   {
@@ -2670,6 +2696,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3c3712e",
+   "metadata": {},
+   "source": [
+    "## 🔹 Define Keywords for Labelling\n",
+    "\n",
+    "**Defines sets of keywords used to identify whether a token should be labeled as a product, location, or price entity for NER tagging.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "67cf0705",
@@ -2688,8 +2724,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49490aef",
+   "metadata": {},
+   "source": [
+    "## 🔹 Import and Apply Labeling Function\n",
+    "mports the label_tokens function that likely compares each token to the keyword sets and assigns BIO labels (e.g., B-PRODUCT, I-PRICE, or O)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "8667951d",
    "metadata": {},
    "outputs": [],
@@ -2703,8 +2748,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69372607",
+   "metadata": {},
+   "source": [
+    "Stores original tokens and their corresponding labels for each row in preparation for exporting in CoNLL format.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "2a6e6077",
    "metadata": {},
    "outputs": [],
@@ -2718,25 +2771,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6caa6abb",
+   "metadata": {},
+   "source": [
+    "- Combines each token and its label into token label format.\n",
+    "- Inserts an empty line between sentences/messages to follow CoNLL standards.\n",
+    "- Joins all lines into a single string with newline separators.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d56434c2",
+   "execution_count": 24,
+   "id": "a63b111a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Labeled data has been saved in CoNLL format.\n"
+      "Success! File saved to: F:/Telegram_E-commerce-_extractor-/data/labeled\\labeled_data.conll\n",
+      "File size: 5312730 bytes\n"
      ]
     }
    ],
    "source": [
-    "# Save to a text file in CoNLL format\n",
-    "with open('labeled_data.conll', 'w', encoding='utf-8') as f:\n",
-    "    f.write(coNLL_data)\n",
     "\n",
-    "print(\"Labeled data has been saved in CoNLL format.\")"
+    "# Define the directory and file path\n",
+    "output_dir = r\"F:/Telegram_E-commerce-_extractor-/data/labeled\"\n",
+    "output_file = \"labeled_data.conll\"\n",
+    "output_path = os.path.join(output_dir, output_file)\n",
+    "\n",
+    "# Ensure the directory exists (create if it doesn't)\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "# Check if coNLL_data is not empty\n",
+    "if not coNLL_data:\n",
+    "    print(\"Warning: coNLL_data is empty! File will be created but contain no data.\")\n",
+    "\n",
+    "try:\n",
+    "    # Write the file\n",
+    "    with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "        f.write(coNLL_data)\n",
+    "    \n",
+    "    # Verify the file was saved\n",
+    "    if os.path.exists(output_path):\n",
+    "        print(f\"Success! File saved to: {output_path}\")\n",
+    "        print(f\"File size: {os.path.getsize(output_path)} bytes\")\n",
+    "    else:\n",
+    "        print(\"Error: File was not created.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while saving the file: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2f581d0",
+   "metadata": {},
+   "source": [
+    "⚙️  Workflow Insight\n",
+    "my workflow is structured into 4 essential NER preprocessing stages:\n",
+    "\n",
+    "Stage\tWhat It Does\n",
+    "1. Data Loading\tReads cleaned product descriptions from a CSV\n",
+    "2. Tokenization & Normalization\tCleans Amharic text and splits into linguistically meaningful tokens\n",
+    "3. Rule-based Labeling\tUses predefined keyword dictionaries to tag tokens with BIO labels\n",
+    "4. CoNLL Export\tSaves the token-label pairs in a format used to train/evaluate NER models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d0cd972",
+   "metadata": {},
+   "source": [
+    "✅ The pipeline is modular and well-structured — easy to plug into model fine-tuning stages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38a9b51c",
+   "metadata": {},
+   "source": [
+    "## 🧠 Insights from Current Results\n",
+    "Your labeled output uses BIO tagging conventions (B-PRICE, I-PRODUCT, O, etc.), which is the standard for CoNLL.\n",
+    "The preview you showed:\n",
+    "\n",
+    "በ B-PRICE\n",
+    "ቀ O\n",
+    "ላ O\n",
+    "...\n",
+    "- confirms that the price keywords (like በ) are being detected and labeled correctly. But it also shows:\n",
+    "- ⚠️ Most tokens are labeled O — indicating limited keyword coverage.\n",
+    "- 🔎 This likely means:\n",
+    "\n",
+    "    Many tokens in your product descriptions are not captured by the current keyword sets.\n",
+    "\n",
+    "-   Some entities (e.g., brand names, place names not in the list) are missed."
    ]
   }
  ],
